*.html 以外にも全ての拡張子がPxFWを通ってしまっていた不具合を修正。
Signed-off-by: Tomoya Koyanagi <tomk79@gmail.com>

--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -1,6 +1,7 @@
 # for PxFW 1.X
 RewriteEngine on
 RewriteCond %{REQUEST_URI} !^.*?/_px_execute.php/
+RewriteCond %{REQUEST_URI} /(.*?\.html)?$
 RewriteRule ^(.*)$ _px_execute.php/$1 [L]
 
 Options -MultiViews +FollowSymLinks
