publish先ディレクトリの設定項目を変更した。
■旧
[paths]
publish_dir = "./_PX/_sys/publish/"

■新
[publish]
path_publish_dir = "./_PX/_sys/publish/"

Signed-off-by: Tomoya Koyanagi <tomk79@gmail.com>

--- a/htdocs/_PX/configs/mainconf.ini
+++ b/htdocs/_PX/configs/mainconf.ini
@@ -7,9 +7,10 @@ allow_pxcommands = 0
 
 [paths]
 px_dir = "./_PX/"
-publish_dir = "./_PX/_sys/publish/"
 
 [filesystem]
 encoding = "UTF-8"
 
+[publish]
+path_publish_dir = "./_PX/_sys/publish/"
 
