error_log と access_log を一旦仮実装。 コンフィグ上、デフォルトはログ出力をしないように、設定をコメントアウトしている。
Signed-off-by: Tomoya Koyanagi <tomk79@gmail.com>

--- a/htdocs/_PX/configs/mainconf.ini
+++ b/htdocs/_PX/configs/mainconf.ini
@@ -7,6 +7,8 @@ allow_pxcommands = 0
 
 [paths]
 px_dir = "./_PX/"
+;error_log = "./_PX/_sys/logs/error_log.txt"
+;access_log = "./_PX/_sys/logs/access_log.txt"
 
 [filesystem]
 encoding = "UTF-8"
