メインコンフィグ： publish.path_publish_dir は意味合いが変わったので、一旦コメントアウト。
Signed-off-by: Tomoya Koyanagi <tomk79@gmail.com>

--- a/htdocs/_PX/configs/mainconf.ini
+++ b/htdocs/_PX/configs/mainconf.ini
@@ -14,5 +14,5 @@ px_dir = "./_PX/"
 encoding = "UTF-8"
 
 [publish]
-path_publish_dir = "./_PX/_sys/publish/"
+;path_publish_dir = "./_PX/_sys/publish/"
 
