$dbhの、特にDBMS周辺の整理を始めた。(まだ途中)
Signed-off-by: Tomoya Koyanagi <tomk79@gmail.com>

--- a/htdocs/_PX/configs/mainconf.ini
+++ b/htdocs/_PX/configs/mainconf.ini
@@ -1,18 +1,25 @@
-
+;
+;   Pickles Framework main config
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 [project]
-id = "pxfw"
-name = "Pickles Project 1.x"
-allow_pxcommands = 0
+id = "pxfw" ; プロジェクトID
+name = "Pickles Project 1.x" ; サイト名
+allow_pxcommands = 1 ; PX Commands の実行を許可するフラグ(1=許可, 0=不許可)
 
 [paths]
-px_dir = "./_PX/"
-;error_log = "./_PX/_sys/logs/error_log.txt"
-;access_log = "./_PX/_sys/logs/access_log.txt"
+px_dir = "./_PX/" ; Pickles Framework のディレクトリパス(必須)
+;access_log = "./_PX/_sys/logs/access_log.txt" ; アクセスログ出力先ファイルパス
+;error_log = "./_PX/_sys/logs/error_log.txt" ; エラーログ出力先ファイルパス
 
 [filesystem]
-encoding = "UTF-8"
+encoding = "UTF-8" ; ファイル名の文字エンコード
 
 [publish]
-;path_publish_dir = "./_PX/_sys/publish/"
+;path_publish_dir = "./_PX/_sys/public_html/" ; パブリッシュ先ディレクトリパス
+
+[dbs]
+dbms = "sqlite" ; DBMS名
+database_name = "./_PX/_sys/database.db" ; データベース名(SQLiteの場合は、データベースのパス)
+
 
