--- a/htdocs/_PX/configs/mainconf.ini
+++ b/htdocs/_PX/configs/mainconf.ini
@@ -5,7 +5,6 @@
 [project]
 id = "pxfw" ; プロジェクトID
 name = "Pickles Project 1.x" ; サイト名
-allow_pxcommands = 1 ; PX Commands の実行を許可するフラグ(1=許可, 0=不許可)
 
 [paths]
 px_dir = "./_PX/" ; Pickles Framework のディレクトリパス(必須)
@@ -19,7 +18,11 @@ encoding = "UTF-8" ; ファイル名の文字エンコード
 ;path_publish_dir = "./_PX/_sys/public_html/" ; パブリッシュ先ディレクトリパス
 
 [dbs]
+prefix = "pxfw" ; テーブル名の接頭辞
 dbms = "sqlite" ; DBMS名
 database_name = "./_PX/_sys/database.db" ; データベース名(SQLiteの場合は、データベースのパス)
 
+[system]
+allow_pxcommands = 1 ; PX Commands の実行を許可するフラグ(1=許可, 0=不許可)
+session_name = "PXSID" ; セッションID
 
