メインコンフィグ auth_type , auth_name , auth_password を実装。 PxFWが基本認証(またはダイジェスト認証)下で稼動している場合でも、パブリッシュできるようになった。
Signed-off-by: Tomoya Koyanagi <tomk79@gmail.com>

--- a/htdocs/_PX/configs/mainconf.ini
+++ b/htdocs/_PX/configs/mainconf.ini
@@ -5,6 +5,9 @@
 [project]
 id = "pxfw" ; プロジェクトID
 name = "Pickles Project 1.x" ; サイト名
+;auth_type = "basic" ; 認証の種類(basic or digest)
+;auth_name = "" ; 基本認証/ダイジェスト認証のID
+;auth_password = "" ; 基本認証/ダイジェスト認証のパスワード
 
 [paths]
 px_dir = "./_PX/" ; Pickles Framework のディレクトリパス(必須)
