--- a/htdocs/_PX/configs/mainconf.ini
+++ b/htdocs/_PX/configs/mainconf.ini
@@ -14,13 +14,10 @@ px_dir = "./_PX/" ; Pickles Framework のディレクトリパス(必須)
 ;access_log = "./_PX/_sys/logs/access_log.txt" ; アクセスログ出力先ファイルパス
 ;error_log = "./_PX/_sys/logs/error_log.txt" ; エラーログ出力先ファイルパス
 
-[filesystem]
-encoding = "UTF-8" ; ファイル名の文字エンコード
-
 [publish]
 ;path_publish_dir = "./_PX/_sys/public_html/" ; パブリッシュ先ディレクトリパス
 
-[dbs]
+[dbms]
 prefix = "pxfw" ; テーブル名の接頭辞
 dbms = "sqlite" ; DBMS名
 database_name = "./_PX/_sys/database.db" ; データベース名(SQLiteの場合は、データベースのパス)
@@ -28,4 +25,5 @@ database_name = "./_PX/_sys/database.db" ; データベース名(SQLiteの場合
 [system]
 allow_pxcommands = 1 ; PX Commands の実行を許可するフラグ(1=許可, 0=不許可)
 session_name = "PXSID" ; セッションID
+filesystem_encoding = "UTF-8" ; ファイル名の文字エンコード
 
