設定項目に system.output_encoding を追加した。他。 - 出力時の文字コードを自動変換する機能。デフォルトの UTF-8 でよい場合は、空白にするか、設定しない。 - これに伴い、*.css *.js がPxFWの処理を通るように変更した。extensions も追加。 - パブリッシュのディレクトリスキャンで、*.php は拾わないようにした。

--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -1,14 +1,8 @@
 # for PxFW 1.X
 RewriteEngine on
 RewriteCond %{REQUEST_URI} !^.*?/_px_execute.php/
-RewriteCond %{REQUEST_URI} /(.*?\.html)?$
+RewriteCond %{REQUEST_URI} /(.*?\.(?:html|css|js))?$
 RewriteRule ^(.*)$ _px_execute.php/$1 [L]
 
 Options -MultiViews +FollowSymLinks
 
-## for PxFW EZmode.
-#RewriteEngine on
-#RewriteRule ^(.*)\.html$ /px1x/_px_execute.php/$1.pxhtml
-#RewriteRule ^(.*)/$ /px1x/_px_execute.php/$1/index.pxhtml
-#
-#Options -MultiViews
