--- a/htdocs/_PX/configs/mainconf.ini
+++ b/htdocs/_PX/configs/mainconf.ini
@@ -26,4 +26,5 @@ database_name = "./_PX/_sys/database.db" ; データベース名(SQLiteの場合
 allow_pxcommands = 1 ; PX Commands の実行を許可するフラグ(1=許可, 0=不許可)
 session_name = "PXSID" ; セッションID
 filesystem_encoding = "UTF-8" ; ファイル名の文字エンコード
+;output_encoding = "UTF-8" ; 出力エンコード
 
