設定項目に system.output_eof_coding を追加した。他。 - 出力時の改行コードを自動変換する機能。デフォルトの CRLF でよい場合は、空白にするか、設定しない。

--- a/htdocs/_PX/configs/mainconf.ini
+++ b/htdocs/_PX/configs/mainconf.ini
@@ -27,4 +27,5 @@ allow_pxcommands = 1 ; PX Commands の実行を許可するフラグ(1=許可, 0
 session_name = "PXSID" ; セッションID
 filesystem_encoding = "UTF-8" ; ファイル名の文字エンコード
 ;output_encoding = "UTF-8" ; 出力エンコード
+;output_eof_coding = "CRLF" ; 出力改行コード("CR"|"LF"|"CRLF")
 
