.htaccess で、エラー出力オフの設定を書き加えた。 一部PHP環境の設定により、PxFW設定時の混乱がみられたため。

--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -6,3 +6,5 @@ RewriteRule ^(.*)$ _px_execute.php/$1 [L]
 
 Options -MultiViews +FollowSymLinks
 
+php_value error_reporting 4
+php_flag display_errors Off
