PX=config の出力を整形。 - フレームワークで定義されている項目を、(設定されていない場合でも)明示的に表示するようにした。 - mainconf.ini に、定義済みで初期値を持たなかったいくつかの項目を、コメントとして追加した。

--- a/htdocs/_PX/configs/mainconf.ini
+++ b/htdocs/_PX/configs/mainconf.ini
@@ -21,7 +21,12 @@ px_dir = "./_PX/" ; Pickles Framework のディレクトリパス(必須)
 [dbms]
 prefix = "pxfw" ; テーブル名の接頭辞
 dbms = "sqlite" ; DBMS名
+;dbms.host = "" ; 接続先ホスト名
+;dbms.port = "" ; 接続先ポート番号
 database_name = "./_PX/_sys/database.db" ; データベース名(SQLiteの場合は、データベースのパス)
+;dbms.user = "" ; ユーザー名
+;dbms.password = "" ; パスワード
+;dbms.charset = "" ; 文字セット
 
 [system]
 allow_pxcommands = 1 ; PX Commands の実行を許可するフラグ(1=許可, 0=不許可)
