セッションの有効期限をコンフィグで設定できるようにした。
- system.session_expire を追加。

--- a/htdocs/_PX/configs/mainconf.ini
+++ b/htdocs/_PX/configs/mainconf.ini
@@ -32,6 +32,7 @@ database_name = "./_PX/_sys/database.db" ; データベース名(SQLiteの場合
 [system]
 allow_pxcommands = 1 ; PX Commands の実行を許可するフラグ(1=許可, 0=不許可)
 session_name = "PXSID" ; セッションID
+session_expire = 1800 ; セッションの有効期限(秒)
 default_theme_id = 'default' ; デフォルトのテーマID
 filesystem_encoding = "UTF-8" ; ファイル名の文字エンコード
 ;output_encoding = "UTF-8" ; 出力エンコード
