--- a/htdocs/_PX/configs/mainconf.ini
+++ b/htdocs/_PX/configs/mainconf.ini
@@ -17,7 +17,7 @@ px_dir = "./_PX/" ; Pickles Framework のディレクトリパス(必須)
 
 [publish]
 ;path_publish_dir = "./_PX/_sys/public_html/" ; パブリッシュ先ディレクトリパス
-;paths_ignore = "/_docs/" ; パブリッシュ対象外パスの一覧(改行区切りで複数指定可)
+;paths_ignore = "/_docs/" ; パブリッシュ対象外パスの一覧(改行, カンマ, セミコロンの何れかで区切り複数指定可、ワイルドカードとしてアスタリスクを使用可)
 
 [dbms]
 prefix = "pxfw" ; テーブル名の接頭辞
