コンフィグにコマンドのパスを設定する commands を追加。
- for Issue #40
- ドキュメントも合わせて更新。

--- a/htdocs/_PX/configs/mainconf.ini
+++ b/htdocs/_PX/configs/mainconf.ini
@@ -29,6 +29,12 @@ database_name = "./_PX/_sys/database.db" ; データベース名(SQLiteの場合
 ;dbms.password = "" ; パスワード
 ;dbms.charset = "" ; 文字セット
 
+[commands]
+;tar="/usr/bin/tar" ; tarコマンドの設定例。
+;zip="/usr/bin/zip" ; zipコマンドの設定例。
+;mecab="/usr/local/bin/mecab" ; mecabコマンドの設定例。
+    ; ※パスはそれぞれシステムによって異なります。
+
 [system]
 allow_pxcommands = 1 ; PX Commands の実行を許可するフラグ(1=許可, 0=不許可)
 session_name = "PXSID" ; セッションID
