コンフィグ項目に colors.main を追加した。

--- a/htdocs/_PX/configs/mainconf.ini
+++ b/htdocs/_PX/configs/mainconf.ini
@@ -19,6 +19,9 @@ px_dir = "./_PX/" ; Pickles Framework のディレクトリパス(必須)
 ;path_publish_dir = "./_PX/_sys/public_html/" ; パブリッシュ先ディレクトリパス
 ;paths_ignore = "/_docs/" ; パブリッシュ対象外パスの一覧(改行, カンマ, セミコロンの何れかで区切り複数指定可、ワイルドカードとしてアスタリスクを使用可)
 
+[colors]
+main = "#00a0e6" ; メインカラー
+
 [dbms]
 prefix = "pxfw" ; テーブル名の接頭辞
 dbms = "sqlite" ; DBMS名
