--- a/htdocs/_PX/configs/mainconf.ini
+++ b/htdocs/_PX/configs/mainconf.ini
@@ -4,7 +4,7 @@
 
 [project]
 id = "pxfw" ; プロジェクトID
-name = "Pickles Project" ; サイト名
+name = "Pickles Framework" ; サイト名
 ;path_top = "/" ; トップページのパス(デフォルト "/")
 ;auth_type = "basic" ; 認証の種類(basic or digest)
 ;auth_name = "" ; 基本認証/ダイジェスト認証のID
