--- a/htdocs/_PX/configs/mainconf.ini
+++ b/htdocs/_PX/configs/mainconf.ini
@@ -19,6 +19,16 @@ px_dir = "./_PX/" ; Pickles Framework のディレクトリパス(必須)
 ;path_publish_dir = "./_PX/_sys/public_html/" ; パブリッシュ先ディレクトリパス
 ;paths_ignore = "/_docs/" ; パブリッシュ対象外パスの一覧(改行, カンマ, セミコロンの何れかで区切り複数指定可、ワイルドカードとしてアスタリスクを使用可)
 
+[publish_extensions]
+; パブリッシュ時の拡張子別の処理の設定
+; ('http'|'include_text'|'copy'|'nopublish')
+html      = "http"
+css       = "http"
+js        = "http"
+php       = "copy"
+nopublish = "nopublish"
+inc       = "include_text"
+
 [colors]
 main = "#00a0e6" ; メインカラー
 
