コンフィグに省略するファイル名を設定する project.directory_index を追加。
- $px->get_directory_index(), $px->get_directory_index_preg_pattern(), $px->get_directory_index_primary() を追加。
- for Issue #48

--- a/htdocs/_PX/configs/mainconf.ini
+++ b/htdocs/_PX/configs/mainconf.ini
@@ -5,6 +5,7 @@
 [project]
 id = "pxfw" ; プロジェクトID
 name = "Pickles Framework" ; サイト名
+;directory_index = "index.html" ; 省略するファイル名(デフォルト "index.html")
 ;path_top = "/" ; トップページのパス(デフォルト "/")
 ;auth_type = "basic" ; 認証の種類(basic or digest)
 ;auth_name = "" ; 基本認証/ダイジェスト認証のID
