--- a/htdocs/_PX/configs/mainconf.ini
+++ b/htdocs/_PX/configs/mainconf.ini
@@ -57,4 +57,5 @@ default_theme_id = 'default' ; デフォルトのテーマID
 filesystem_encoding = "UTF-8" ; ファイル名の文字エンコード
 ;output_encoding = "UTF-8" ; 出力エンコード
 ;output_eof_coding = "CRLF" ; 出力改行コード("CR"|"LF"|"CRLF")
-
+file_default_permission = 775 ; ファイル書き込み時のデフォルトのパーミッション
+dir_default_permission = 775 ; ディレクトリ書き込み時のデフォルトのパーミッション
