--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -6,11 +6,11 @@ RewriteRule ^(.*)$ _px_execute.php/$1 [L]
 
 Options -MultiViews +FollowSymLinks
 
-php_value error_reporting 4
+php_value error_reporting 6135 # <- E_ALL & ~E_NOTICE
 php_flag display_errors Off
 
 # for unknown error
-#php_value error_reporting 32767
+#php_value error_reporting 6143 # <- E_ALL
 #php_flag display_errors On
 
 # for large contents
