デフォルトテーマを変更。色を塗り、リンクアイコンをつけた。
- リンクアイコンはSVGででるようにした。
- for Issue #53
- ついでに、スタティックメソッドにstaticキーワードをつけた。
- ついでに、.htaccess から error_reporting の設定を削除。PHPのバージョンによって設定値が違うらしいので。

--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -6,11 +6,9 @@ RewriteRule ^(.*)$ _px_execute.php/$1 [L]
 
 Options -MultiViews +FollowSymLinks
 
-php_value error_reporting 6135 # <- E_ALL & ~E_NOTICE
 php_flag display_errors Off
 
-# for unknown error
-#php_value error_reporting 6143 # <- E_ALL
+# for display errors
 #php_flag display_errors On
 
 # for large contents
