--- a/htdocs/_PX/configs/mainconf.ini
+++ b/htdocs/_PX/configs/mainconf.ini
@@ -53,10 +53,10 @@ database_name = "./_PX/_sys/database.db" ; データベース名(SQLiteの場合
 allow_pxcommands = 1 ; PX Commands の実行を許可するフラグ(1=許可, 0=不許可)
 session_name = "PXSID" ; セッションID
 session_expire = 1800 ; セッションの有効期限(秒)
-default_theme_id = 'default' ; デフォルトのテーマID
+default_theme_id = "default" ; デフォルトのテーマID
 filesystem_encoding = "UTF-8" ; ファイル名の文字エンコード
 ;output_encoding = "UTF-8" ; 出力エンコード
 ;output_eof_coding = "CRLF" ; 出力改行コード("CR"|"LF"|"CRLF")
 file_default_permission = 775 ; ファイル書き込み時のデフォルトのパーミッション
 dir_default_permission = 775 ; ディレクトリ書き込み時のデフォルトのパーミッション
-public_cache_dir = '_caches' ; 公開キャッシュディレクトリのディレクトリ名
+public_cache_dir = "_caches" ; 公開キャッシュディレクトリのディレクトリ名
