$px->ssi() の実装変更にコメントを追記。
- あと、Noticeレベルのエラーを出力するかしょを幾つか修正。

--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -10,6 +10,7 @@ php_flag display_errors Off
 
 # for display errors
 #php_flag display_errors On
+#php_value error_reporting 32767
 
 # for large contents
 #php_value memory_limit -1
