コンフィグ項目 system.ssi_method に、選択肢 emulate_ssi を追加。
- ついでに、system.ssi_methodの設定値が正しくない場合に、エラーコメントを出力するように修正。

--- a/htdocs/_PX/configs/mainconf.ini
+++ b/htdocs/_PX/configs/mainconf.ini
@@ -60,4 +60,4 @@ filesystem_encoding = "UTF-8" ; ファイル名の文字エンコード
 file_default_permission = 775 ; ファイル書き込み時のデフォルトのパーミッション
 dir_default_permission = 775 ; ディレクトリ書き込み時のデフォルトのパーミッション
 public_cache_dir = "_caches" ; 公開キャッシュディレクトリのディレクトリ名
-;ssi_method = "static" ; SSIの方式("static"|"php_virtual"|"php_include"|"http")
+;ssi_method = "static" ; SSIの方式("static"|"php_virtual"|"php_include"|"http"|"emulate_ssi")
