composer に対応。./_PX/libs/composer/ に展開したライブラリを自動ロードするようになった。

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 htdocs/_caches/*
 htdocs/_PX/_sys/*
 htdocs/_PX/plugins/*
+htdocs/_PX/libs/composer/vendor/*
+htdocs/_PX/libs/composer/composer.lock
+htdocs/_PX/libs/composer/composer.phar
 .DS_Store
 Thumbs.db
+scss_cache
